--- a/none/package.json
+++ b/none/package.json
@@ -18,7 +18,7 @@
     "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "jest": "^26.0.1",
-    "serverless": "^1.72.0",
+    "serverless": "^1.78.1",
     "serverless-export-env": "^1.3.1",
     "serverless-iam-roles-per-function": "^2.0.2",
     "serverless-pseudo-parameters": "^2.5.0"
@@ -29,6 +29,7 @@
     "@dazn/lambda-powertools-logger": "^1.24.1",
     "@dazn/lambda-powertools-pattern-basic": "^1.24.1",
     "@dazn/lambda-powertools-sns-client": "^1.24.1",
+    "@middy/core": "^1.2.0",
     "@middy/ssm": "^1.2.0",
     "aws4": "^1.10.0",
     "axios": "^0.19.2",
