--- a/none/serverless.yml
+++ b/none/serverless.yml
@@ -14,13 +14,13 @@ provider:
   runtime: nodejs12.x
   environment:
     LOG_LEVEL: ${self:custom.logLevel.${self:custom.stage}, self:custom.logLevel.default}
-    AWS_NODEJS_CONNECTION_REUSE_ENABLED: 1
     serviceName: ${self:service}
     stage: ${self:provider.stage}
   
 functions:
   get-index:
     handler: functions/get-index.handler
+    timeout: 3
     environment:
       restaurants_api:
         Fn::Join:
@@ -45,6 +45,7 @@ functions:
 
   get-restaurants:
     handler: functions/get-restaurants.handler
+    timeout: 3
     events:
       - http:
           path: /restaurants
@@ -65,6 +66,7 @@ functions:
 
   search-restaurants:
     handler: functions/search-restaurants.handler
+    timeout: 3
     events:
       - http:
           path: /restaurants/search
@@ -173,7 +175,7 @@ resources:
         Value: '{
           "isEnabled": true, 
           "failureMode": "blacklist", 
-          "rate": 0.5,
+          "rate": 0.25,
           "blacklist": ["s3.*.amazonaws.com", "dynamodb.*.amazonaws.com"]
         }'
 
@@ -183,11 +185,11 @@ resources:
         Name: /${self:service}/${self:provider.stage}/search-restaurants/chaos-config
         Type: String
         Value: '{
-          "isEnabled": false, 
+          "isEnabled": true, 
           "failureMode": "latency", 
           "rate": 1,
           "minLatency": 1000, 
-          "maxLatency": 29000
+          "maxLatency": 10000
         }'
 
     LambdaInvocationCustomResource:
@@ -212,3 +214,4 @@ resources:
 plugins:
   - serverless-pseudo-parameters
   - serverless-iam-roles-per-function
+  - serverless-export-env
